--- a/_includes/call-to-action.html
+++ b/_includes/call-to-action.html
@@ -1,4 +1,4 @@
-<div class="bg-gray-100">
+<div class="bg-white">
   <div class="max-w-screen-xl mx-auto py-12 px-4 sm:px-6 lg:py-16 lg:px-8 lg:flex lg:items-center lg:justify-between">
     <h2 class="text-3xl leading-9 font-extrabold tracking-tight text-gray-900 sm:text-4xl sm:leading-10">
       Have a request?
@@ -7,12 +7,12 @@
     </h2>
     <div class="mt-8 flex lg:flex-shrink-0 lg:mt-0">
       <div class="inline-flex rounded-md shadow">
-        <a href="https://twitter.com/{{ site.twitter_username }}" target="_blank" class="inline-flex items-center justify-center px-5 py-3 border border-transparent text-base leading-6 font-medium rounded-md text-white bg-green-600 hover:bg-green-500 focus:outline-none focus:shadow-outline transition duration-150 ease-in-out">
+        <a href="https://twitter.com/{{ site.twitter_username }}" target="_blank" class="inline-flex items-center justify-center px-5 py-3 border border-green-500 text-base leading-6 font-medium rounded-md text-white bg-green-600 hover:bg-green-500 focus:outline-none focus:shadow-outline transition duration-150 ease-in-out">
           Twitter
         </a>
       </div>
       <div class="ml-3 inline-flex rounded-md shadow">
-        <a href="https://www.linkedin.com/in/{{ site.linkedin_username }}/" target="_blank" class="inline-flex items-center justify-center px-5 py-3 border border-transparent text-base leading-6 font-medium rounded-md text-green-600 bg-white hover:text-green-500 focus:outline-none focus:shadow-outline transition duration-150 ease-in-out">
+        <a href="https://www.linkedin.com/in/{{ site.linkedin_username }}/" target="_blank" class="inline-flex items-center justify-center px-5 py-3 border border-gray-200 text-base leading-6 font-medium rounded-md text-green-600 bg-white hover:text-green-500 focus:outline-none focus:shadow-outline transition duration-150 ease-in-out">
           LinkedIn
         </a>
       </div>
